...
    <string name="set_Negative_Button" translatable="false">Cancel</string>
    <string name="Response" translatable="false">ListItemsActivity passed: My information to share</string>

    <string name="email_invalid" translatable="false">Enter a valid email address!</string>
    <string name="password_invalid" translatable="false">Enter a valid password!</string>

    <string name="start_chat" translatable="false">Start Chat</string>
    <string name="send" translatable="false">Send</string>
    <string name="type_message" translatable="false">Type a message...</string>


    <string name="Test_toolbar" translatable="false">Test Toolbar</string>
    <string name="go_back">Do you want to go back?</string>
...
